--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/3d.png" /> -->
+  <link rel="shortcut icon" href="%PUBLIC_URL%/hamer.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <title>Welcome to Diego-Maquill Page - Full Stack Web Developer</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+  <script src="https://kit.fontawesome.com/1829044fbd.js" crossorigin="anonymous"></script>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
